// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectField handles invalid property names in order 1`] = `
<React.Fragment>
  <SchemaField
    config={Object {}}
    formName="test-form"
    isRequired={true}
    locale="pt-br"
    path="user.email"
    schema={
      Object {
        "type": "string",
      }
    }
  />
  <SchemaField
    config={Object {}}
    formName="test-form"
    isRequired={false}
    locale="pt-br"
    path="user.firstName"
    schema={
      Object {
        "type": "string",
      }
    }
  />
  <SchemaField
    config={Object {}}
    formName="test-form"
    isRequired={false}
    locale="pt-br"
    path="user.lastName"
    schema={
      Object {
        "type": "string",
      }
    }
  />
</React.Fragment>
`;

exports[`ObjectField renders emptyObject widget 1`] = `
<EmptyObject
  config={Object {}}
  context={Object {}}
  formName="test-form"
  locale="pt-br"
  path="user"
  schema={
    Object {
      "properties": Object {},
      "type": "object",
    }
  }
  widgets={
    Object {
      "emptyObject": "EmptyObject",
    }
  }
/>
`;

exports[`ObjectField renders with configured order 1`] = `
<React.Fragment>
  <SchemaField
    config={Object {}}
    formName="test-form"
    isRequired={true}
    locale="pt-br"
    path="user.email"
    schema={
      Object {
        "type": "string",
      }
    }
  />
  <SchemaField
    config={Object {}}
    formName="test-form"
    isRequired={false}
    locale="pt-br"
    path="user.firstName"
    schema={
      Object {
        "type": "string",
      }
    }
  />
  <SchemaField
    config={Object {}}
    formName="test-form"
    isRequired={false}
    locale="pt-br"
    path="user.lastName"
    schema={
      Object {
        "type": "string",
      }
    }
  />
</React.Fragment>
`;

exports[`ObjectField renders with empty order 1`] = `<React.Fragment />`;

exports[`ObjectField renders with required 1`] = `
<React.Fragment>
  <SchemaField
    config={Object {}}
    formName="test-form"
    isRequired={true}
    locale="pt-br"
    path="user.email"
    schema={
      Object {
        "type": "string",
      }
    }
  />
  <SchemaField
    config={Object {}}
    formName="test-form"
    isRequired={false}
    locale="pt-br"
    path="user.firstName"
    schema={
      Object {
        "type": "string",
      }
    }
  />
  <SchemaField
    config={Object {}}
    formName="test-form"
    isRequired={false}
    locale="pt-br"
    path="user.lastName"
    schema={
      Object {
        "type": "string",
      }
    }
  />
</React.Fragment>
`;

exports[`ObjectField renders with title and required 1`] = `
<ObjectFieldWrapper
  config={Object {}}
  formName="test-form"
  isRequired={true}
  locale="pt-br"
  path="user"
  schema={
    Object {
      "properties": Object {
        "email": Object {
          "type": "string",
        },
        "firstName": Object {
          "type": "string",
        },
        "lastName": Object {
          "type": "string",
        },
      },
      "title": "User",
      "type": "object",
    }
  }
>
  <SchemaField
    config={Object {}}
    formName="test-form"
    isRequired={false}
    locale="pt-br"
    path="user.firstName"
    schema={
      Object {
        "type": "string",
      }
    }
  />
  <SchemaField
    config={Object {}}
    formName="test-form"
    isRequired={false}
    locale="pt-br"
    path="user.lastName"
    schema={
      Object {
        "type": "string",
      }
    }
  />
  <SchemaField
    config={Object {}}
    formName="test-form"
    isRequired={false}
    locale="pt-br"
    path="user.email"
    schema={
      Object {
        "type": "string",
      }
    }
  />
</ObjectFieldWrapper>
`;

exports[`ObjectField renders without required 1`] = `
<React.Fragment>
  <SchemaField
    config={Object {}}
    context={
      Object {
        "foo": "bar",
      }
    }
    formName="test-form"
    isRequired={false}
    locale="pt-br"
    path="email"
    schema={
      Object {
        "type": "string",
      }
    }
    widgets={Object {}}
  />
  <SchemaField
    config={Object {}}
    context={
      Object {
        "foo": "bar",
      }
    }
    formName="test-form"
    isRequired={false}
    locale="pt-br"
    path="firstName"
    schema={
      Object {
        "type": "string",
      }
    }
    widgets={Object {}}
  />
  <SchemaField
    config={Object {}}
    context={
      Object {
        "foo": "bar",
      }
    }
    formName="test-form"
    isRequired={false}
    locale="pt-br"
    path="lastName"
    schema={
      Object {
        "type": "string",
      }
    }
    widgets={Object {}}
  />
</React.Fragment>
`;
